# WEAM-SPOTS

./: .gitignore  README.md  associative.py  choose.py  classif.py  classif_dreams.py  constants.py  dataset.py  dream.logs.txt  dream.sh  eam.py  mcols_stdevs.py  neural_net.py  nnet_stats.py  noised_classif.py  parse_history.py  pyproject.toml  requirements.txt  run_first.sh  run_second.sh  runexp.sh  runexps.sh  runfirst.sh  train.logs.txt  train.sh
SPOTS/: README.md  customloader.py
logs/: train.logs.txt
runs-128/: behaviours.npy  classification-fld_000.npy  classification-fld_001.npy  classification-fld_002.npy  classification-fld_003.npy  classification-fld_004.npy  features-noised-fld_000.npy  features-noised-fld_001.npy  features-noised-fld_002.npy  features-noised-fld_003.npy  features-noised-fld_004.npy  features-testing-fld_000.npy  features-testing-fld_001.npy  features-testing-fld_002.npy  features-testing-fld_003.npy  features-testing-fld_004.npy  labels-filling-fld_000.npy  labels-filling-fld_003.npy  labels-filling-fld_004.npy  labels-noised-fld_003.npy  labels-noised-fld_004.npy  labels-testing-fld_000.npy  labels-training-fld_001.npy  learn_params.npy  main_average_entropy-sze_002.csv  main_average_entropy-sze_004.csv  main_average_entropy-sze_008.csv  main_average_entropy-sze_128.csv  main_average_precision-sze_002.csv  main_average_precision-sze_004.csv  main_average_precision-sze_008.csv  main_average_precision-sze_128.csv  main_average_recall-sze_002.csv  main_average_recall-sze_004.csv  main_average_recall-sze_008.csv  (+36 more)
runs-256/: behaviours.npy  (+51 more)
(+332 files in other folders)
